# Seam-Carving-FPSE

./: .gitignore  Design.md  README.md  bisect118723192.coverage  bisect167029637.coverage  bisect211048757.coverage  bisect584187276.coverage  bisect6054829.coverage  bisect609889134.coverage  bisect938595925.coverage  dune-project
_build/: .db  .digest-db  log
_build/default/: META.seam_carving  seam_carving.dune-package  seam_carving.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: ImageProcess.ml  SeamIdentification.ml  SeamIdentification.mli  SeamRemoval.ml  SeamRemoval.mli  array.ml  gif.ml  seam_carving.cma  seam_carving.cmxa  seam_carving.cmxs  seam_carving.ml-gen  types.mli
_build/default/lib/.merlin-conf/: lib-seam_carving
_build/default/lib/.seam_carving.objs/: seam_carving__Array.impl.d  seam_carving__Array.intf.d  seam_carving__Gif.impl.d  seam_carving__Gif.intf.d  seam_carving__ImageProcess.impl.d  seam_carving__ImageProcess.intf.d  seam_carving__SeamIdentification.impl.d  seam_carving__SeamIdentification.intf.all-deps  seam_carving__SeamIdentification.intf.d  seam_carving__SeamRemoval.impl.d  seam_carving__SeamRemoval.intf.d
_build/default/lib/.seam_carving.objs/byte/: seam_carving.cmi  seam_carving.cmo  seam_carving.cmt  seam_carving__Array.cmi  seam_carving__Array.cmt  seam_carving__Array.cmti  seam_carving__Gif.cmi  seam_carving__Gif.cmo  seam_carving__Gif.cmt  seam_carving__Gif.cmti  seam_carving__ImageProcess.cmi  seam_carving__ImageProcess.cmo  seam_carving__ImageProcess.cmt  seam_carving__ImageProcess.cmti  seam_carving__SeamIdentification.cmi  seam_carving__SeamIdentification.cmt  seam_carving__SeamIdentification.cmti  seam_carving__SeamRemoval.cmi  seam_carving__SeamRemoval.cmt  seam_carving__SeamRemoval.cmti  seam_carving__Types.cmi  seam_carving__Types.cmti
_build/default/lib/.seam_carving.objs/native/: seam_carving.cmx  (+2 more)
_build/default/seam/: seam_carver.ml
_build/default/seam/.merlin-conf/: exe-seam_carver
_build/default/src/: image_process.ml  seam_carving.cma  seam_carving.cmxa  seam_carving.cmxs  seam_carving.ml-gen  seam_identification.mli  types.ml
_build/default/src/.merlin-conf/: lib-seam_carving
_build/default/src/.seam_carving.objs/: seam_carving__Gif.impl.d  seam_carving__Gif.intf.d  seam_carving__Image_process.impl.d  seam_carving__Image_process.intf.d  seam_carving__Seam_identification.impl.d  seam_carving__Seam_identification.intf.d  seam_carving__Types.impl.d
_build/default/test/.merlin-conf/: exe-test_seam_carving
_coverage/: index.html
_coverage/src/: Types.ml.html
_coverage/test/: test_seam_carving.ml.html
lib/: Gif.mli  ImageProcess.mli  SeamIdentification.mli  SeamRemoval.mli  Types.mli  dune
ocamlLibraryDemos/: dune  imageLibDemo.ml  seam_carver  seam_carver.cmi  seam_carver.cmo
seam/: seam_carver.ml
src/: Gif.ml  Gif.mli  SeamIdentification.ml  Types.ml  Types.mli  dune  image_process.ml  image_process.mli  processing.ml  processing.mli  seam_identification.ml  seam_identification.mli
static/: index.html  script.js  style.css
test/: All_tests.ml  dune  test_image_process.ml  test_seam_carving.ml  test_types.ml
(+80 files in other folders)
